<resources>
    <string name="app_name">QuickTimer</string>
    <string name="instructions">Instructions: Press button and enjoy.</string>
    <string name="initialization">Timer not yet initialized</string>
    <string name="_1_minute">1 minute</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_45_minutes">45 minutes</string>
    <string name="_50_minutes">50 minutes</string>
    <string name="_60_minutes">60 minutes</string>
</resources>
